--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,2 +1,7 @@
 .main-container{
   background-color: rgba(52, 84, 57, 0.5);
+  border: 5px solid yellow;
+  padding: 30px;
+}
+.main-container-text{
+  font-family:
