unit test update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <div class = "main-container">
-  <h1 class = "main
+  <h1 class = "main-container-text">Bitcoin Transaction System</h1>
+</div>
+<nav>
+  
