--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
   <h1 class = "main-container-text">Bitcoin Transaction System</h1>
 </div>
 <nav>
-  
+    <a class = "header-links-style" routerLink = "/login" >Login<
