Fixed date format

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
 <nav>
     <a class = "header-links-style" routerLink = "/login" >Login</a>
     <a class = "header-links-style" routerLink = "/testing">Testing</a>
-  
+    <a class = "header-links-style" routerLink = "/register">Register</a>
