--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,6 @@
     <a class = "header-links-style" routerLink = "/login" >Login</a>
     <a class = "header-links-style" routerLink = "/testing">Testing</a>
     <a class = "header-links-style" routerLink = "/register">Register</a>
+</nav>
+
+<router-outlet></router-outlet>
