--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -1,4 +1,8 @@
 <div>
 
   <h1>User Details</h1><br/>
-  BitCoins : <b>{{bitCoins}
+  BitCoins : <b>{{bitCoins}}</b><br/>
+  FiatCurrency : <b>{{fiatCurrency}}</b>
+
+  <br/><br/>
+  Bit
