KULRICE-5318: removing calls to IdentityManagementService

--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -5,4 +5,5 @@
   FiatCurrency : <b>{{fiatCurrency}}</b>
 
   <br/><br/>
-  Bit
+  BitCoin value: {{bValue}}$<br/><br/>
+  How many bit coins would you like to buy?
