--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -6,4 +6,6 @@
 
   <br/><br/>
   BitCoin value: {{bValue}}$<br/><br/>
-  How many bit coins would you like to buy?
+  How many bit coins would you like to buy?<br/><br/>
+
+  <input type="text" placeholder="bitcoins" (keyup) = "onTextEnteredI
