--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -8,4 +8,6 @@
   BitCoin value: {{bValue}}$<br/><br/>
   How many bit coins would you like to buy?<br/><br/>
 
-  <input type="text" placeholder="bitcoins" (keyup) = "onTextEnteredI
+  <input type="text" placeholder="bitcoins" (keyup) = "onTextEnteredInInputForCalculatingBitCoinValues($event)"/>
+  <br/><br/>
+  SubTotal : {{cal
