--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -10,4 +10,7 @@
 
   <input type="text" placeholder="bitcoins" (keyup) = "onTextEnteredInInputForCalculatingBitCoinValues($event)"/>
   <br/><br/>
-  SubTotal : {{cal
+  SubTotal : {{calSubTotal}}$<br/><br/>
+  How would you pay commission?<br/><br/>
+
+  <input type="r
