--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -13,4 +13,4 @@
   SubTotal : {{calSubTotal}}$<br/><br/>
   How would you pay commission?<br/><br/>
 
-  <input type="r
+  <input type="radio" value="BitCoin" name="CommType" (change) = radioCommType($event)> Bit
