--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -13,4 +13,5 @@
   SubTotal : {{calSubTotal}}$<br/><br/>
   How would you pay commission?<br/><br/>
 
-  <input type="radio" value="BitCoin" name="CommType" (change) = radioCommType($event)> Bit
+  <input type="radio" value="BitCoin" name="CommType" (change) = radioCommType($event)> BitCoin
+  <p *ngIf="fiatRadioFlag"><input  type="radio" value="FiatCash" 
