done the VideoCall !

--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -16,4 +16,5 @@
   <input type="radio" value="BitCoin" name="CommType" (change) = radioCommType($event)> BitCoin
   <p *ngIf="fiatRadioFlag"><input  type="radio" value="FiatCash" name="CommType" (change) = radioCommType($event)> FiatCash </p>
   <br/><br/>
-  Commi
+  Commission in BitCoin : {{calCommissionBit}}$<br/><br/>
+  Commission in Flatcur
