--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -17,4 +17,8 @@
   <p *ngIf="fiatRadioFlag"><input  type="radio" value="FiatCash" name="CommType" (change) = radioCommType($event)> FiatCash </p>
   <br/><br/>
   Commission in BitCoin : {{calCommissionBit}}$<br/><br/>
-  Commission in Flatcur
+  Commission in Flatcurrency : {{calCommissionFiat}}$<br/><br/>
+
+  Total : {{calTotal}}
+  <br/>
+  <button *
