--- a/src/app/buy-bit-coins/buy-bit-coins.component.html
+++ b/src/app/buy-bit-coins/buy-bit-coins.component.html
@@ -23,4 +23,6 @@
   <br/>
   <button *ngIf="buyFlag" (click) = "buyBitCoins()">Buy!</button>
 
-  <p *ngIf
+  <p *ngIf="errorFlag">{{errorMessageFromResponse}}</p>
+
+</div>
