--- a/src/app/child-names/child-names.component.html
+++ b/src/app/child-names/child-names.component.html
@@ -1,3 +1,4 @@
 <p class = "each-child-block">
   child-names works : {{names}}
-  <button (click)="sendToParent(name
+  <button (click)="sendToParent(names)">Click This!</button>
+</p>
