--- a/src/app/client-history/client-history.component.html
+++ b/src/app/client-history/client-history.component.html
@@ -1,4 +1,6 @@
 <div class="history-style" >
 
   Transaction Id : {{transId}}<br/>
-  ClientID : {{clientId
+  ClientID : {{clientId}}<br/>
+  TransactionType : {{transType}}<br/>
+  TransactionValue : {{tr
