Update `tape`, `jscs`

--- a/src/app/client-history/client-history.component.html
+++ b/src/app/client-history/client-history.component.html
@@ -3,4 +3,5 @@
   Transaction Id : {{transId}}<br/>
   ClientID : {{clientId}}<br/>
   TransactionType : {{transType}}<br/>
-  TransactionValue : {{tr
+  TransactionValue : {{transVal}}<br/>
+  TransactionCommission : {{trans
