fix typo in docs

--- a/src/app/client-history/client-history.component.html
+++ b/src/app/client-history/client-history.component.html
@@ -4,4 +4,5 @@
   ClientID : {{clientId}}<br/>
   TransactionType : {{transType}}<br/>
   TransactionValue : {{transVal}}<br/>
-  TransactionCommission : {{trans
+  TransactionCommission : {{transCommission}}<br/>
+  TransactionCommissionType : {{transCommission
