Removed unused property

--- a/src/app/client-history/client-history.component.html
+++ b/src/app/client-history/client-history.component.html
@@ -5,4 +5,6 @@
   TransactionType : {{transType}}<br/>
   TransactionValue : {{transVal}}<br/>
   TransactionCommission : {{transCommission}}<br/>
-  TransactionCommissionType : {{transCommission
+  TransactionCommissionType : {{transCommissionType}}<br/>
+  TransactionStatus : {{transStatus}}<br/>
+  BitCoin Value : {{bitCoinVal
