update bottle for nightly on 10.12.6

--- a/src/app/client-history/client-history.component.html
+++ b/src/app/client-history/client-history.component.html
@@ -7,4 +7,7 @@
   TransactionCommission : {{transCommission}}<br/>
   TransactionCommissionType : {{transCommissionType}}<br/>
   TransactionStatus : {{transStatus}}<br/>
-  BitCoin Value : {{bitCoinVal
+  BitCoin Value : {{bitCoinValue}}<br/>
+
+  <p *ngIf="errorFlag">{{errorMessageFromResponse}}</p>
+</di
