--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,4 +2,12 @@
 
   <h1>User Details</h1><br/>
   BitCoins : <b>{{bitCoins}}</b><br/>
-  FiatCurrency : <b
+  FiatCurrency : <b>{{fiatCurrency}}</b>
+
+
+  <br/>
+  <br/>
+  <br/>
+
+
+  <input type="text" placeholder="load money" (keyup) = "onTextEnteredInInputForLoadingMoney($eve
