--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -10,4 +10,9 @@
   <br/>
 
 
-  <input type="text" placeholder="load money" (keyup) = "onTextEnteredInInputForLoadingMoney($eve
+  <input type="text" placeholder="load money" (keyup) = "onTextEnteredInInputForLoadingMoney($event)"/>
+  <button (click) = "loadAmount()">Load</button>
+
+  <br/>
+  <br/>
+ 
