fix missing quote

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,4 +16,8 @@
   <br/>
   <br/>
   <button (click) = "buyBitCoins()">Buy</button>
-  <button (click) = "sellBitCoi
+  <button (click) = "sellBitCoins()">sell</button>
+
+  <p *ngIf="errorFlag">{{errorMessageFromResponse}}</p>
+
+</div>
