--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -1,2 +1,3 @@
 <div>
-  <p *ngIf="errorFlag" >{{errorMessage}}<
+  <p *ngIf="errorFlag" >{{errorMessage}}</p>
+  Enter Username : <input type="text" placeholder="UserName" (keyup) = "f
