--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -5,4 +5,6 @@
   <button (click) = "findTheUserDetailsButtons()">Find</button><br/>
   <button (click) = "findTheUserTransHistoryButtons()">History</button><br/>
   <div *ngIf="showDetails">
-    <br/><br
+    <br/><br/>
+    Client's UserName : {{clientId}}<br/>
+    Name : {{cli
