--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -7,4 +7,6 @@
   <div *ngIf="showDetails">
     <br/><br/>
     Client's UserName : {{clientId}}<br/>
-    Name : {{cli
+    Name : {{clientName}}<br/>
+    City : {{clientCity}}<br/>
+    State : {{clientState}}<br
