--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -9,4 +9,6 @@
     Client's UserName : {{clientId}}<br/>
     Name : {{clientName}}<br/>
     City : {{clientCity}}<br/>
-    State : {{clientState}}<br
+    State : {{clientState}}<br/>
+    Type : {{clientType}}<br/>
+    phoneNumber : {{phoneNumbe
