--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -11,4 +11,6 @@
     City : {{clientCity}}<br/>
     State : {{clientState}}<br/>
     Type : {{clientType}}<br/>
-    phoneNumber : {{phoneNumbe
+    phoneNumber : {{phoneNumber}}<br/>
+    ZipCode : {{clientZipCode}}<br/>
+    No.Of transactions 
