s390/idle: fix sequence handling vs cpu hotplug

--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -13,4 +13,7 @@
     Type : {{clientType}}<br/>
     phoneNumber : {{phoneNumber}}<br/>
     ZipCode : {{clientZipCode}}<br/>
-    No.Of transactions 
+    No.Of transactions : {{transCount}}<br/>
+    <br/><br/>
+  </div>
+  <div *ngIf="hi
