--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -16,4 +16,6 @@
     No.Of transactions : {{transCount}}<br/>
     <br/><br/>
   </div>
-  <div *ngIf="hi
+  <div *ngIf="historyFlag">
+    <h2>{{clientName}}'s BitCoins History</h2>
+    <app-c
