--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -18,4 +18,4 @@
   </div>
   <div *ngIf="historyFlag">
     <h2>{{clientName}}'s BitCoins History</h2>
-    <app-c
+    <app-client-history *ngFor="let transIds of transList" [transId]="transIds"></app-client-histo
