--- a/src/app/homepage-trader/homepage-trader.component.html
+++ b/src/app/homepage-trader/homepage-trader.component.html
@@ -22,4 +22,5 @@
   </div>
   <h2>New BitCoin Transactions</h2>
   <app-trader-childs *ngFor = "let pnames of namesList" [parentTrader]="pnames"></app-trader-childs>
-  <h2>New FiatCurre
+  <h2>New FiatCurrency Transactions</h2>
+  <app-trader-child-buy *ngFor = "let b
