--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -1,4 +1,4 @@
 <div>
   <p *ngIf="errorFlag" >{{errorMessage}}</p>
 
-  <input type
+  <input type="text" placeholder="UserName" (keyup) = "registrationInputForUserName($event)
