proc: uid: Changes the thread notifier to profile event notifier.

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -1,4 +1,6 @@
 <div>
   <p *ngIf="errorFlag" >{{errorMessage}}</p>
 
-  <input type="text" placeholder="UserName" (keyup) = "registrationInputForUserName($event)
+  <input type="text" placeholder="UserName" (keyup) = "registrationInputForUserName($event)"/>
+  <br/>
+  <input type="text" placeholder="Password" (keyup)
