--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -3,4 +3,6 @@
 
   <input type="text" placeholder="UserName" (keyup) = "registrationInputForUserName($event)"/>
   <br/>
-  <input type="text" placeholder="Password" (keyup)
+  <input type="text" placeholder="Password" (keyup) = "registrationInputForPassword($event)"/>
+  <br/>
+  <input type="text" placeholder="F
