Edited wiki page Create_a_live_distro through web user interface.

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -5,4 +5,6 @@
   <br/>
   <input type="text" placeholder="Password" (keyup) = "registrationInputForPassword($event)"/>
   <br/>
-  <input type="text" placeholder="F
+  <input type="text" placeholder="FirstName" (keyup) = "registrationInputForFirstName($event)"/>
+  <br/>
+ 
