[TASK] Initial commit

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -7,4 +7,4 @@
   <br/>
   <input type="text" placeholder="FirstName" (keyup) = "registrationInputForFirstName($event)"/>
   <br/>
- 
+  <input type="text" placeholder="LastName" (keyup) = "registrationInputForLas
