LICENSE and README

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -7,4 +7,6 @@
   <br/>
   <input type="text" placeholder="FirstName" (keyup) = "registrationInputForFirstName($event)"/>
   <br/>
-  <input type="text" placeholder="LastName" (keyup) = "registrationInputForLas
+  <input type="text" placeholder="LastName" (keyup) = "registrationInputForLastName($event)"/>
+  <br/>
+  <input type="text" placeholder="PhoneNumber" (ke
