--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -9,4 +9,6 @@
   <br/>
   <input type="text" placeholder="LastName" (keyup) = "registrationInputForLastName($event)"/>
   <br/>
-  <input type="text" placeholder="PhoneNumber" (ke
+  <input type="text" placeholder="PhoneNumber" (keyup) = "registrationInputForPhoneNumber($event)"/>
+  <br/>
+ 
