--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -11,4 +11,4 @@
   <br/>
   <input type="text" placeholder="PhoneNumber" (keyup) = "registrationInputForPhoneNumber($event)"/>
   <br/>
- 
+  <input type="text" placeholder="Email" (keyup) = "registrationInputForEmail(
