Fast commit by Cuttlerat

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -14,4 +14,4 @@
   <input type="text" placeholder="Email" (keyup) = "registrationInputForEmail($event)"/>
   <br/>
   <p>Select the type</p>
-  <input type="radio" value
+  <input type="radio" value="client" name="ClientType" (change) = radioClientType($event)> Client
