Add command line arguments

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -15,3 +15,4 @@
   <br/>
   <p>Select the type</p>
   <input type="radio" value="client" name="ClientType" (change) = radioClientType($event)> Client
+  <input type="radio" value="trader" name="ClientType" (change) = rad
