Remove unused using

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -15,4 +15,8 @@
   <br/>
   <p>Select the type</p>
   <input type="radio" value="client" name="ClientType" (change) = radioClientType($event)> Client
-  <input type="radio" value="trader" name="ClientType" (change) = rad
+  <input type="radio" value="trader" name="ClientType" (change) = radioClientType($event)> Trader
+  <br/>
+  <h3>Address:</h3>
+  <br/>
+  Sta
