mm/hugetlb: check for pte NULL pointer in __page_check_address()

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -19,4 +19,5 @@
   <br/>
   <h3>Address:</h3>
   <br/>
-  State : <input type="text" placeholder="State" (keyup) = "re
+  State : <input type="text" placeholder="State" (keyup) = "registrationInputForAddState($event)"/><br/>
+  City : <input type="
