--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -20,4 +20,5 @@
   <h3>Address:</h3>
   <br/>
   State : <input type="text" placeholder="State" (keyup) = "registrationInputForAddState($event)"/><br/>
-  City : <input type="text" placeholder="State" (keyup) = "registrationInputForAddCity($even
+  City : <input type="text" placeholder="State" (keyup) = "registrationInputForAddCity($event)"/><br/>
+  Zipcode : <input type="text" placeholder="State" (keyu
