Add license text

--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -21,4 +21,5 @@
   <br/>
   State : <input type="text" placeholder="State" (keyup) = "registrationInputForAddState($event)"/><br/>
   City : <input type="text" placeholder="State" (keyup) = "registrationInputForAddCity($event)"/><br/>
-  Zipcode : <input type="text" placeholder="State" (keyu
+  Zipcode : <input type="text" placeholder="State" (keyup) = "registrationInputForAddZipcode($event)"/><br/>
+  Street :
