--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -22,4 +22,4 @@
   State : <input type="text" placeholder="State" (keyup) = "registrationInputForAddState($event)"/><br/>
   City : <input type="text" placeholder="State" (keyup) = "registrationInputForAddCity($event)"/><br/>
   Zipcode : <input type="text" placeholder="State" (keyup) = "registrationInputForAddZipcode($event)"/><br/>
-  Street :
+  Street : <input type="text" placeholder="State" (keyup) = "registrationInputForAddStreet(
