--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -22,4 +22,5 @@
   State : <input type="text" placeholder="State" (keyup) = "registrationInputForAddState($event)"/><br/>
   City : <input type="text" placeholder="State" (keyup) = "registrationInputForAddCity($event)"/><br/>
   Zipcode : <input type="text" placeholder="State" (keyup) = "registrationInputForAddZipcode($event)"/><br/>
-  Street : <input type="text" placeholder="State" (keyup) = "registrationInputForAddStreet(
+  Street : <input type="text" placeholder="State" (keyup) = "registrationInputForAddStreet($event)"/><br/>
+  <button (click) = "validateRegistration()">Register!</
