--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -23,4 +23,5 @@
   City : <input type="text" placeholder="State" (keyup) = "registrationInputForAddCity($event)"/><br/>
   Zipcode : <input type="text" placeholder="State" (keyup) = "registrationInputForAddZipcode($event)"/><br/>
   Street : <input type="text" placeholder="State" (keyup) = "registrationInputForAddStreet($event)"/><br/>
-  <button (click) = "validateRegistration()">Register!</
+  <button (click) = "validateRegistration()">Register!</button>
+</div>
