--- a/src/app/testing-part/testing-part.component.css
+++ b/src/app/testing-part/testing-part.component.css
@@ -1,4 +1,8 @@
 .main-container{
   background-color: rgba(52, 84, 57, 0.5);
   border: 5px solid yellow;
-  padding: 30p
+  padding: 30px;
+}
+.main-container-text{
+  font-family: sans-serif;
+  font-style: 
