libceph: make ceph_con_revoke() a msg operation

--- a/src/app/trader-child-buy/trader-child-buy.component.html
+++ b/src/app/trader-child-buy/trader-child-buy.component.html
@@ -1,1 +1,5 @@
-<div class="trader-child-buy
+<div class="trader-child-buy-style">
+
+  <br/>
+  Transaction Id : {{buyIdFromParent}}<br/>
+  ClientI
