update method name

--- a/src/app/trader-child-buy/trader-child-buy.component.html
+++ b/src/app/trader-child-buy/trader-child-buy.component.html
@@ -2,4 +2,6 @@
 
   <br/>
   Transaction Id : {{buyIdFromParent}}<br/>
-  ClientI
+  ClientID : {{clientId}}<br/>
+  Transactoin Amount : {{transVal}}<br/>
+  Paym
