chore(package): update eslint-plugin-react to version 6.0.0

--- a/src/app/trader-child-buy/trader-child-buy.component.html
+++ b/src/app/trader-child-buy/trader-child-buy.component.html
@@ -4,4 +4,7 @@
   Transaction Id : {{buyIdFromParent}}<br/>
   ClientID : {{clientId}}<br/>
   Transactoin Amount : {{transVal}}<br/>
-  Paym
+  Payment Status : {{paymentStatus}}<br/>
+
+  <p *ngIf="buttonsFlag">
+  <button (click) 
