--- a/src/app/trader-child-buy/trader-child-buy.component.html
+++ b/src/app/trader-child-buy/trader-child-buy.component.html
@@ -7,4 +7,5 @@
   Payment Status : {{paymentStatus}}<br/>
 
   <p *ngIf="buttonsFlag">
-  <button (click) 
+  <button (click) = "acceptTrans()">Accept</button>
+  <button (click) = "rejectTrans()">Reject</butt
