--- a/src/app/trader-child-buy/trader-child-buy.component.html
+++ b/src/app/trader-child-buy/trader-child-buy.component.html
@@ -8,4 +8,10 @@
 
   <p *ngIf="buttonsFlag">
   <button (click) = "acceptTrans()">Accept</button>
-  <button (click) = "rejectTrans()">Reject</butt
+  <button (click) = "rejectTrans()">Reject</button>
+  </p>
+  <p *ngIf="errorFlag">{{errorMessageFromResponse}}</p>
+
+  <br/>
+
+</
