New file from SurmBlog Admin interface

--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -1,4 +1,6 @@
 <div class="names-parent-style">
   <br/>
   Transaction Id : {{parentTrader}}<br/>
-  ClientID : {{cli
+  ClientID : {{clientId}}<br/>
+  TransactionType : {{transType}}<br/>
+  Tr
