--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -3,4 +3,5 @@
   Transaction Id : {{parentTrader}}<br/>
   ClientID : {{clientId}}<br/>
   TransactionType : {{transType}}<br/>
-  Tr
+  TransactionValue : {{transVal}}<br/>
+  TransactionCommission : {{transCommission
