--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -4,4 +4,6 @@
   ClientID : {{clientId}}<br/>
   TransactionType : {{transType}}<br/>
   TransactionValue : {{transVal}}<br/>
-  TransactionCommission : {{transCommission
+  TransactionCommission : {{transCommission}}<br/>
+  TransactionCommissionType : {{transCommissionType}}<br/>
+  TransactionSta
