fix missing quote

--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -6,4 +6,6 @@
   TransactionValue : {{transVal}}<br/>
   TransactionCommission : {{transCommission}}<br/>
   TransactionCommissionType : {{transCommissionType}}<br/>
-  TransactionSta
+  TransactionStatus : {{transStatus}}<br/>
+  BitCoin Value : {{bitCoinValue}}<br/>
+ 
