--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -8,4 +8,5 @@
   TransactionCommissionType : {{transCommissionType}}<br/>
   TransactionStatus : {{transStatus}}<br/>
   BitCoin Value : {{bitCoinValue}}<br/>
- 
+  <p *ngIf="buttonsFlag">
+  <button (click) = "acceptTrans()">Accept</butt
