--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -9,4 +9,7 @@
   TransactionStatus : {{transStatus}}<br/>
   BitCoin Value : {{bitCoinValue}}<br/>
   <p *ngIf="buttonsFlag">
-  <button (click) = "acceptTrans()">Accept</butt
+  <button (click) = "acceptTrans()">Accept</button>
+  <button (click) = "rejectTrans()">Reject</button>
+  </p>
+  <p *ngI
