Removed the .idea folder

--- a/src/app/trader-childs/trader-childs.component.html
+++ b/src/app/trader-childs/trader-childs.component.html
@@ -12,4 +12,7 @@
   <button (click) = "acceptTrans()">Accept</button>
   <button (click) = "rejectTrans()">Reject</button>
   </p>
-  <p *ngI
+  <p *ngIf="errorFlag">{{errorMessageFromResponse}}</p>
+
+  <br/>
+</div>
